<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/display" />

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b8"
        android:layout_alignBottom="@+id/b8"
        android:text="@string/_7" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b7"
        android:layout_below="@+id/b7"
        android:layout_marginTop="17dp"
        android:text="@string/_4" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b4"
        android:layout_below="@+id/b4"
        android:layout_marginTop="13dp"
        android:text="@string/_1" />

    <Button
        android:id="@+id/bzero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b1"
        android:layout_below="@+id/b1"
        android:layout_marginTop="10dp"
        android:text="@string/_0" />

    <Button
        android:id="@+id/bminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b6"
        android:layout_alignBottom="@+id/b6"
        android:layout_alignLeft="@+id/bplus"
        android:text="@string/minus" />

    <Button
        android:id="@+id/bmult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b3"
        android:layout_alignBottom="@+id/b3"
        android:layout_alignLeft="@+id/bminus"
        android:text="@string/star" />

    <Button
        android:id="@+id/bdivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bequals"
        android:layout_alignBottom="@+id/bequals"
        android:layout_alignLeft="@+id/bmult"
        android:text="@string/divide" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b6"
        android:layout_alignBottom="@+id/b6"
        android:layout_alignLeft="@+id/b8"
        android:text="@string/_5" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b3"
        android:layout_alignBottom="@+id/b3"
        android:layout_alignLeft="@+id/b5"
        android:text="@string/_2" />

    <Button
        android:id="@+id/bdot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bzero"
        android:layout_alignBottom="@+id/bzero"
        android:layout_alignLeft="@+id/b2"
        android:text="@string/dot" />

    <Button
        android:id="@+id/bC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bplus"
        android:layout_alignLeft="@+id/b7"
        android:text="@string/c" />

    <Button
        android:id="@+id/bplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv1"
        android:layout_below="@+id/bCE"
        android:layout_marginRight="14dp"
        android:layout_marginTop="32dp"
        android:text="@string/plus" />

    <Button
        android:id="@+id/bCE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bplus"
        android:layout_below="@+id/tv1"
        android:text="@string/ce" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bplus"
        android:layout_alignBottom="@+id/bplus"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/b7"
        android:text="@string/_8" />

    <Button
        android:id="@+id/bequals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bdot"
        android:layout_alignBottom="@+id/bdot"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/bdot"
        android:text="@string/equals" />

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b4"
        android:layout_alignLeft="@+id/bequals"
        android:text="@string/_9" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b4"
        android:layout_alignBottom="@+id/b4"
        android:layout_alignLeft="@+id/b9"
        android:text="@string/_6" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bzero"
        android:layout_alignLeft="@+id/bequals"
        android:text="@string/_3" />

</RelativeLayout>